# snparcher

./: .gitattributes  .gitignore  AGENTS.md  README.md  TODO.md  mkado-module.md  mkdocs.yml  pyproject.toml  run-postprocess.sh  run-qc.sh  v2-modularity-maintainability-plan.md  version-2-design.md
.github/workflows/: test.yaml
.test/bam-to-vcf/config/: config.yaml  samples.csv
.test/bam-to-vcf/data/: local_genome
.test/ci/config/: config.yaml  samples.csv
.test/ecoli/config/: config.yaml
.test/fastq-to-vcf/config/: config-osx-arm64.yaml  config.yaml
.test/fastq-to-vcf/profiles/default/: config.yaml
.test/gvcf-to-vcf/config/: config.yaml  samples.csv
.test/gvcf-to-vcf/data/: SAMN12676327.g.vcf.gz.tbi  local_genome
config/: config.v2.example.yaml  config.yaml  sample_metadata.csv
docs/: config-fields-supported.md  examples.md  executing.md  index.md  methods_and_refs.md  modules.md  sample-sheet-options-supported.md  setup.md  v2-migration.md
docs/explanation/: index.md
docs/how-to/: index.md
docs/reference/: config.md  index.md  sample-sheet.md
docs/tutorials/: index.md
example/: config  data
tests/: conftest.py  tests.py  unit_tests.py
tests/configs/: legacy_v1_style.yaml  local_genome.yaml  local_genome_extra_keys.yaml  local_genome_global_markdup.yaml  local_genome_mk.yaml  local_genome_multistage.yaml  local_genome_no_clam.yaml  local_genome_no_clam_multistage.yaml  local_genome_postprocess.yaml  local_genome_qc.yaml  local_genome_ref_name_underscore.yaml
tests/data/fixtures/config/: config.yaml  samples.csv
tests/data/fixtures/results/bams/markdup/: sample0.bam  sample0.bam.bai  sample1.bam  sample1.bam.bai  sample2.bam  sample2.bam.bai  sample3.bam  sample3.bam.bai  sample4.bam  sample4.bam.bai
tests/data/fixtures/results/callable_sites/: mappability.bed  mappability.bedgraph
tests/data/fixtures/results/callable_sites/callable_loci.zarr/: zarr.json
tests/data/fixtures/results/callable_sites/depths/: sample0.mosdepth.global.dist.txt  sample0.mosdepth.summary.txt  sample0.per-base.d4  sample1.mosdepth.global.dist.txt  sample1.mosdepth.summary.txt  sample1.per-base.d4  sample2.mosdepth.global.dist.txt  sample2.mosdepth.summary.txt  sample2.per-base.d4  sample3.mosdepth.global.dist.txt  sample3.mosdepth.summary.txt  sample3.per-base.d4  sample4.mosdepth.global.dist.txt  sample4.mosdepth.summary.txt  sample4.per-base.d4
tests/data/fixtures/results/callable_sites/depths.zarr/: zarr.json
tests/data/fixtures/results/callable_sites/genmap_index/: index.ids.concat  index.lf.drp  index.lf.drv  index.lf.drv.sbl  index.lf.pst  index.rev.lf.drp  index.rev.lf.drv  index.rev.lf.drv.sbl  (+4 more)
tests/data/fixtures/results/gatk_genomics_db/: L0000.tar  L0001.tar  L0002.tar  L0003.tar  L0004.tar  L0005.tar  L0006.tar  L0007.tar  L0008.tar  L0009.tar  L0010.tar  L0011.tar  L0012.tar  L0013.tar  L0014.tar  L0015.tar  L0016.tar  L0017.tar  L0018.tar  L0019.tar  L0020.tar  L0021.tar  L0022.tar  L0023.tar  L0024.tar  L0025.tar  L0026.tar  L0027.tar  L0028.tar  L0029.tar  L0030.tar  L0031.tar  L0032.tar  L0033.tar  L0034.tar  L0035.tar  L0036.tar
tests/data/fixtures/results/genomics_db/: mapfile.txt
tests/data/fixtures/results/gvcfs/: sample0.g.vcf.gz.tbi  sample1.g.vcf.gz.tbi  sample2.g.vcf.gz.tbi  sample3.g.vcf.gz.tbi  sample4.g.vcf.gz.tbi
tests/data/fixtures/results/intervals/: picard.interval_list
tests/data/fixtures/results/qc_metrics/: qc_report.tsv
tests/data/fixtures/results/reference/: my_organism.dict  my_organism.fa.gz.ann  my_organism.fa.gz.bwt  my_organism.fa.gz.fai  my_organism.fa.gz.gzi  my_organism.fa.gz.pac  my_organism.fa.gz.sa
tests/data/fixtures/results/vcfs/: raw.vcf.gz.tbi
tests/data/mk/: test.gff
tests/data/postprocess/: callable_sites.bed  raw.vcf  ref.fai  sample_metadata.csv  samples.csv
tests/data/qc/: qc_report.tsv  sample_metadata.csv  samples.csv
tests/data/reference/: Test_Ref.fa
tests/sample_metadata/: exclude_and_outgroup.csv  minimal_metadata.csv  partial_metadata.csv  unknown_sample.csv  valid_metadata.csv
tests/sample_sheets/: local_fastqs.csv  local_fastqs_and_srr_same_library.csv  local_fastqs_global_markdup.csv  local_fastqs_multirow_multi_library.csv  local_fastqs_multirow_same_library.csv  local_fastqs_no_dedup.csv  local_gvcf.csv
workflow/: Snakefile
workflow-profiles/default/: config.yaml
workflow/envs/: bam2vcf.yml  bcftools.yaml  bcftools.yml  callable_sites.yaml  clam.yaml  cov_filter.yml  deepvariant.yaml  fastp.yaml  fastq2bam.yml  gatk.yaml  genmap.yaml  glnexus.yaml  mappability.yml  mosdepth.yaml  reference.yaml  sambamba.yaml  sambamba.yml  samtools.yaml  sra.yaml
workflow/modules/mk/: Snakefile
workflow/modules/mk/config/: config.yaml
workflow/modules/postprocess/: Snakefile
workflow/modules/postprocess/config/: config.yaml
workflow/modules/qc/: Snakefile
workflow/modules/qc/config/: config.yaml
workflow/modules/qc/envs/: admixture.yml  plink.yml  qc.yml  subsample_snps.yml
workflow/modules/qc/scripts/: contigs4admixture.py  qc_dashboard_interactive.Rmd  qc_dashboard_render.R
workflow/modules/trackhub/scripts/: vcftools_out_to_bg.py  write_hub_files.py
workflow/rules/: callable_sites.smk  common.smk  cov_filter.smk  fastq.smk  intervals.smk  mappability.smk  mapping.smk  qc_metrics.smk  reference.smk
workflow/rules/align/: bwa.smk  sentieon.smk
workflow/rules/call/: gatk.smk  gatk_intervals.smk  intervals.smk  sentieon.smk
workflow/rules/filter/: coverage.smk  mappability.smk
workflow/rules/stats/: sumstats.smk
workflow/rules/variant_calling/: bcftools.smk  deepvariant.smk  gatk.smk  gatk_intervals.smk  hard_filters.smk  joint_gvcf.smk  joint_gvcf_intervals.smk  parabricks.smk  sentieon.smk
workflow/schemas/: config.schema.json  config.schema.yaml  sample_metadata.schema.yaml  samples.schema.json  samples.schema.yaml
workflow/scripts/: callable_coverage_thresholds.py  callable_zarr_to_bed.py  create_coverage_bed.py  create_coverage_thresholds.py  make_intervals.py  samples_to_keep.py
workflow/snparcher_utils/: __init__.py  write_samples.py
(+1454 files in other folders)
