[project]
name = "snparcher"
version = "2.0.0-dev"
description = "A Snakemake workflow for population genomic variant calling"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

# ============ PIXI CONFIGURATION ============

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64", "osx-arm64", "osx-64"]

[tool.pixi.dependencies]
python = ">=3.11"
snakemake = ">=9.0"
pandas = "*"
pyyaml = "*"
conda = "*"

[tool.pixi.feature.dev.dependencies]
ruff = "*"
snakefmt = "*"
pytest = "*"
pytest-xdist = "*"
pytest-split = "*"
pytest-dependency = ">=0.5.1,<0.6"

[tool.pixi.feature.docs.dependencies]
mkdocs = "*"
mkdocs-material = "*"

[tool.pixi.environments]
default = { features = [], solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }

# ============ TASKS ============

[tool.pixi.tasks]
lint-snakemake = "snakemake --lint"

[tool.pixi.feature.dev.tasks]
# Linting
lint = "ruff check workflow/"
format = "ruff format workflow/ && snakefmt workflow/"

# Setup conda envs for unit tests
setup-test-envs = """snakemake -s workflow/Snakefile \
    --configfile config/config.yaml \
    --config samples=config/samples.csv \
    --use-conda --conda-prefix $(pwd)/.snakemake/conda \
    --conda-create-envs-only --cores 1 \
    --directory $(pwd)/tests/data/fixtures"""
# Integration tests
test = "pytest -v tests/tests.py"
test-dry-run = "pytest -v tests/tests.py --dry-run-only"
test-core = 'pytest -v tests/tests.py -k "not metadata and not postprocess and not qc and not mk"'
test-metadata = 'pytest -v tests/tests.py -k "metadata and not postprocess and not qc and not mk"'
test-postprocess = 'pytest -v tests/tests.py -k "postprocess"'
test-qc = 'pytest -v tests/tests.py -k "qc"'
test-mk = 'pytest -v tests/tests.py -k "mk"'

# Unit tests (stage tests)
unit-test = "pytest -v tests/unit_tests.py --conda-prefix $(pwd)/.snakemake/conda"
unit-test-parallel = "pytest -v tests/unit_tests.py -n auto --conda-prefix $(pwd)/.snakemake/conda"
unit-test-debug = "pytest -v tests/unit_tests.py -s --conda-prefix $(pwd)/.snakemake/conda"

# Dry run
dry-run = "snakemake -s workflow/Snakefile --configfile tests/configs/local_genome.yaml --config samples=tests/sample_sheets/local_fastqs_no_dedup.csv -n -p all"

[tool.pixi.feature.docs.tasks]
docs-serve = "mkdocs serve"
docs-build = "mkdocs build"

# ============ RUFF CONFIGURATION ============

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"